fix: use clip overflow for card details to prevent scroll

--- a/web/src/templates/standard/style.raw.css
+++ b/web/src/templates/standard/style.raw.css
@@ -120,7 +120,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: clip;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 }
